2009-08-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/mqueuecreatesupp.c, posix/src/mqueuenametoid.c,
	posix/src/mqueueopen.c, posix/src/semaphorecreatesupp.c: Tinker with
	error handling for name too long. Use strnlen to ensure we do not run
	off the end of the maximum length string.

2009-08-06      Christian Mauderer <christian.mauderer@embedded-brains.de>

        * rtems/include/rtems/rtems/types.h: Improve documentation.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/bspcmdline/bspcmdline.h, libmisc/bspcmdline/bspcmdline_get.c,
	libmisc/bspcmdline/bspcmdline_getparam.c,
	libmisc/bspcmdline/bspcmdline_getparamraw.c,
	libmisc/bspcmdline/bspcmdline_getparamrhs.c: Add rtems_ as prefix to
	all routines.

2009-08-06	Chris Johns <chrisj@rtems.org>

	* libblock/src/bdbuf.c: Fix group user logic.
	* libblock/include/rtems/blkdev.h, libblock/src/blkdev.c,
	libblock/src/nvdisk.c, libblock/src/flashdisk.c: Add set block
	size, and get media block size support.

2009-08-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/src/sigaction.c: _POSIX_signals_Clear_process_signals now takes
	signal number not mask.

2009-08-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libcsupport/Makefile.am, rtems/Makefile.am, rtems/preinstall.am,
	sapi/Makefile.am, sapi/preinstall.am, score/Makefile.am,
	score/preinstall.am, score/include/rtems/score/heap.h,
	score/inline/rtems/score/heap.inl: Remove inline version now that it
	is in a C file.
	* libcsupport/src/end_profile.c: New file.

2009-08-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/Makefile.am: Move from inline to body to avoid path explosion
	from inlining this. Makes coverage analysis easier.
	* score/src/heapalignupuptr.c: New file.

2009-08-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/bspcmdline/bspcmdline.h, libmisc/bspcmdline/bspcmdline_get.c,
	libmisc/bspcmdline/bspcmdline_getparam.c,
	libmisc/bspcmdline/bspcmdline_getparamraw.c,