@@ -1,3 +1,8 @@
+2009-08-06	Chris Johns <chrisj@rtems.org>
+
+	* score/src/objectextendinformation.c: Ensure that nothing is moved or
+	copied until all memory is successfully allocated.
+
 2009-08-06	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* posix/src/mqueuecreatesupp.c, posix/src/mqueuenametoid.c,
